feat(kafka): allow for the update of reauthentication enabled
Also passes its value into ManagedKafkaCR

Closes https://issues.redhat.com/browse/MGDSTRM-6062
