# internal/kafka/internal/api/private/api/openapi.yaml
@@ -3,7 +3,7 @@ info:
   description: Kafka Service Fleet Manager APIs that are used by internal services
     e.g kas-fleetshard operators.
   title: Kafka Service Fleet Manager
-  version: 1.3.0
+  version: 1.4.0
 servers:
 - description: Main (production) server
   url: https://api.openshift.com
@@ -211,6 +211,7 @@ components:
             fallbackUserNameClaim: preferred_username
             tlsTrustedCertificate: ""
             customClaimCheck: ""
+            maximumSessionLifetime: 1898
           endpoint:
             bootstrapServerHost: example-kafka--rfpsqbvq-em-u-u-z--ymjcwac.kafka.devshift.org
             tls:
@@ -520,6 +521,9 @@ components:
           type: string
         customClaimCheck:
           type: string
+        maximumSessionLifetime:
+          nullable: true
+          type: long
     ManagedKafka_allOf_spec_endpoint_tls:
       nullable: true
       properties:
