# internal/kafka/internal/api/private/model_managed_kafka_all_of_spec_oauth.go
@@ -3,7 +3,7 @@
  *
  * Kafka Service Fleet Manager APIs that are used by internal services e.g kas-fleetshard operators.
  *
- * API version: 1.3.0
+ * API version: 1.4.0
  * Generated by: OpenAPI Generator (https://openapi-generator.tech)
  */
 
@@ -20,4 +20,5 @@ type ManagedKafkaAllOfSpecOauth struct {
 	FallbackUserNameClaim  string  `json:"fallbackUserNameClaim,omitempty"`
 	TlsTrustedCertificate  *string `json:"tlsTrustedCertificate,omitempty"`
 	CustomClaimCheck       string  `json:"customClaimCheck,omitempty"`
+	MaximumSessionLifetime *int64  `json:"maximumSessionLifetime,omitempty"`
 }
